--- a/SurRound/View/Post+Story/Post/Base.lproj/Post.storyboard
+++ b/SurRound/View/Post+Story/Post/Base.lproj/Post.storyboard
@@ -23,7 +23,7 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="riB-ak-1gk">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="792"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="762"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="dataSource" destination="OBa-9q-1b7" id="e9Q-vA-g8w"/>
@@ -45,20 +45,20 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6CH-g8-dpM">
-                                        <rect key="frame" x="0.0" y="792" width="414" height="70"/>
+                                        <rect key="frame" x="0.0" y="762" width="414" height="100"/>
                                         <subviews>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bwv-uS-15P" customClass="KMPlaceholderTextView" customModule="KMPlaceholderTextView">
-                                                <rect key="frame" x="56" y="20" width="287" height="30"/>
+                                                <rect key="frame" x="56" y="20" width="287" height="40"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="w1n-YA-GN2"/>
+                                                    <constraint firstAttribute="height" constant="40" id="w1n-YA-GN2"/>
                                                 </constraints>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="text.bubble" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="I2s-sY-hFL">
-                                                <rect key="frame" x="20" y="26.5" width="24" height="23.5"/>
+                                                <rect key="frame" x="20" y="36.5" width="24" height="23.5"/>
                                                 <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="24" id="dWr-kx-HUz"/>
@@ -66,7 +66,7 @@
                                                 </constraints>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2xe-jK-Wtz">
-                                                <rect key="frame" x="355" y="20" width="39" height="30"/>
+                                                <rect key="frame" x="355" y="33" width="39" height="30"/>
                                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Reply"/>
                                                 <connections>
@@ -76,15 +76,14 @@
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="I2s-sY-hFL" secondAttribute="bottom" constant="20" id="5Wy-V1-CPM"/>
+                                            <constraint firstAttribute="bottom" secondItem="I2s-sY-hFL" secondAttribute="bottom" constant="40" id="5Wy-V1-CPM"/>
                                             <constraint firstItem="2xe-jK-Wtz" firstAttribute="leading" secondItem="bwv-uS-15P" secondAttribute="trailing" constant="12" id="C14-Mk-bz3"/>
-                                            <constraint firstAttribute="bottom" secondItem="bwv-uS-15P" secondAttribute="bottom" constant="20" id="O1x-it-eAZ"/>
+                                            <constraint firstAttribute="bottom" secondItem="bwv-uS-15P" secondAttribute="bottom" constant="40" id="O1x-it-eAZ"/>
                                             <constraint firstItem="bwv-uS-15P" firstAttribute="top" secondItem="6CH-g8-dpM" secondAttribute="top" constant="20" id="Oay-Y5-6Pt"/>
+                                            <constraint firstItem="2xe-jK-Wtz" firstAttribute="centerY" secondItem="I2s-sY-hFL" secondAttribute="centerY" id="U39-sB-eZ8"/>
                                             <constraint firstAttribute="trailing" secondItem="2xe-jK-Wtz" secondAttribute="trailing" constant="20" id="YO8-Vl-Mvi"/>
                                             <constraint firstItem="bwv-uS-15P" firstAttribute="leading" secondItem="I2s-sY-hFL" secondAttribute="trailing" constant="12" id="Zp5-eE-DG7"/>
-                                            <constraint firstAttribute="height" priority="750" constant="40" id="ovg-gI-4zA"/>
                                             <constraint firstItem="I2s-sY-hFL" firstAttribute="leading" secondItem="6CH-g8-dpM" secondAttribute="leading" constant="20" id="u6j-lx-A88"/>
-                                            <constraint firstAttribute="bottom" secondItem="2xe-jK-Wtz" secondAttribute="bottom" constant="20" id="vy5-qQ-nPT"/>
                                         </constraints>
                                     </view>
                                 </subviews>
