--- a/SurRound/View/Home/Base.lproj/Home.storyboard
+++ b/SurRound/View/Home/Base.lproj/Home.storyboard
@@ -20,10 +20,10 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                             </view>
                             <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="M8w-fz-HHO">
-                                <rect key="frame" x="0.0" y="88" width="414" height="72"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="80"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="72" id="Ftl-zd-5B9"/>
+                                    <constraint firstAttribute="height" constant="80" id="Ftl-zd-5B9"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Cn5-Lu-enj">
                                     <size key="itemSize" width="70" height="63"/>
@@ -32,8 +32,8 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="StoryPreviewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gnp-Zh-ksB" customClass="StoryPreviewCell" customModule="SurRound" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="4.666666666666667" width="70" height="63"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="StoryPreviewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gnp-Zh-ksB" customClass="StoryPreviewCell" customModule="SurRound" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="8.6666666666666661" width="70" height="63"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Wy7-RM-eK4">
                                             <rect key="frame" x="0.0" y="0.0" width="70" height="63"/>
@@ -73,6 +73,7 @@
                                         <connections>
                                             <outlet property="avatarImageView" destination="BUJ-OM-MCT" id="aIg-uC-Ymy"/>
                                             <outlet property="borderCircleView" destination="8TP-7S-TSO" id="AAs-po-I1H"/>
+                                            <outlet property="usernameLabel" destination="TAh-Cc-XcY" id="j5p-Jt-F9B"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -95,11 +96,14 @@
                         <viewLayoutGuide key="safeArea" id="01r-1D-3Sn"/>
                     </view>
                     <navigationItem key="navigationItem" id="1hh-oj-oPw">
-                        <barButtonItem key="rightBarButtonItem" image="film.fill" catalog="system" id="0DL-mM-CkD">
-                            <connections>
-                                <action selector="showVideoRecording:" destination="T9V-En-WM8" id="o8R-6M-WwG"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem image="film.fill" catalog="system" id="0DL-mM-CkD">
+                                <connections>
+                                    <action selector="showVideoRecording:" destination="T9V-En-WM8" id="o8R-6M-WwG"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem image="magnifyingglass" catalog="system" id="TyN-69-sZe"/>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="M8w-fz-HHO" id="YpP-D0-mko"/>
@@ -131,5 +135,6 @@
     </scenes>
     <resources>
         <image name="film.fill" catalog="system" width="128" height="93"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
     </resources>
 </document>
