--- a/SurRound/View/Post+Story/NewPost/Base.lproj/NewPost.storyboard
+++ b/SurRound/View/Post+Story/NewPost/Base.lproj/NewPost.storyboard
@@ -76,8 +76,14 @@
                     <rect key="frame" x="0.0" y="0.0" width="413" height="250"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="選擇貼文分類" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="flj-GX-cAU">
+                            <rect key="frame" x="157.5" y="16" width="98" height="19.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3wH-5s-8AT">
-                            <rect key="frame" x="0.0" y="0.0" width="413" height="250"/>
+                            <rect key="frame" x="0.0" y="35.5" width="413" height="214.5"/>
                             <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cNj-M4-WXR">
                                 <size key="itemSize" width="128" height="128"/>
                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -93,10 +99,12 @@
                     </subviews>
                     <color key="backgroundColor" red="0.54740279213387344" green="0.60929281799807822" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
+                        <constraint firstItem="flj-GX-cAU" firstAttribute="top" secondItem="0Ju-eX-Dlf" secondAttribute="top" constant="16" id="1uG-gB-hff"/>
                         <constraint firstItem="3wH-5s-8AT" firstAttribute="leading" secondItem="D66-Gt-45K" secondAttribute="leading" id="8gP-5B-3R7"/>
                         <constraint firstItem="3wH-5s-8AT" firstAttribute="bottom" secondItem="D66-Gt-45K" secondAttribute="bottom" id="V95-V7-jvy"/>
+                        <constraint firstItem="flj-GX-cAU" firstAttribute="centerX" secondItem="0Ju-eX-Dlf" secondAttribute="centerX" id="WE5-eE-E4T"/>
                         <constraint firstItem="3wH-5s-8AT" firstAttribute="trailing" secondItem="D66-Gt-45K" secondAttribute="trailing" id="j8E-ax-2RO"/>
-                        <constraint firstItem="3wH-5s-8AT" firstAttribute="top" secondItem="0Ju-eX-Dlf" secondAttribute="top" id="tU9-2R-BQp"/>
+                        <constraint firstItem="3wH-5s-8AT" firstAttribute="top" secondItem="flj-GX-cAU" secondAttribute="bottom" id="tU9-2R-BQp"/>
                     </constraints>
                     <viewLayoutGuide key="safeArea" id="D66-Gt-45K"/>
                 </view>
