Add completion for successful replying.

--- a/SurRound/View/Post+Story/Post/PostDetailBodyCell.xib
+++ b/SurRound/View/Post+Story/Post/PostDetailBodyCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="117" id="KGk-i7-Jjw" customClass="BodyTableViewCell" customModule="SurRound" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="117" id="KGk-i7-Jjw" customClass="PostDetailBodyCell" customModule="SurRound" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="117"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -17,10 +17,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5B3-iI-J4w">
-                        <rect key="frame" x="16" y="8" width="288" height="63"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <rect key="frame" x="16" y="8" width="288" height="55"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="OBg-NX-9pb"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="32" id="OBg-NX-9pb"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                         <nil key="textColor"/>
@@ -29,20 +29,27 @@
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tpN-jw-Rg5">
                         <rect key="frame" x="16" y="79" width="21" height="22"/>
                         <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <state key="normal" image="heart" catalog="system"/>
+                        <state key="normal" image="suit.heart" catalog="system"/>
+                        <state key="selected" image="suit.heart.fill" catalog="system"/>
+                        <connections>
+                            <action selector="didTapLikeButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="7Dt-Yi-LbK"/>
+                        </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n2z-f8-fzY">
                         <rect key="frame" x="45" y="79" width="23" height="22"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <state key="normal" image="text.bubble" catalog="system"/>
+                        <connections>
+                            <action selector="didTapReplyButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Xc7-KU-c9M"/>
+                        </connections>
                     </button>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="tpN-jw-Rg5" secondAttribute="bottom" constant="16" id="J4y-am-8ct"/>
                     <constraint firstItem="5B3-iI-J4w" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="OMj-s8-54L"/>
                     <constraint firstItem="5B3-iI-J4w" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="dGJ-je-oZd"/>
-                    <constraint firstItem="tpN-jw-Rg5" firstAttribute="top" secondItem="5B3-iI-J4w" secondAttribute="bottom" constant="8" id="eQg-TA-6Hw"/>
+                    <constraint firstItem="tpN-jw-Rg5" firstAttribute="top" secondItem="5B3-iI-J4w" secondAttribute="bottom" constant="16" id="eQg-TA-6Hw"/>
                     <constraint firstItem="tpN-jw-Rg5" firstAttribute="leading" secondItem="5B3-iI-J4w" secondAttribute="leading" id="mXh-3f-usN"/>
                     <constraint firstAttribute="trailing" secondItem="5B3-iI-J4w" secondAttribute="trailing" constant="16" id="wEv-Ck-8lw"/>
                     <constraint firstItem="n2z-f8-fzY" firstAttribute="centerY" secondItem="tpN-jw-Rg5" secondAttribute="centerY" id="xHr-3y-Vdh"/>
@@ -51,13 +58,15 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="descriptionLabel" destination="5B3-iI-J4w" id="j5v-C1-LDj"/>
+                <outlet property="likeButton" destination="tpN-jw-Rg5" id="jOV-Av-Wb0"/>
+                <outlet property="postTextLabel" destination="5B3-iI-J4w" id="j5v-C1-LDj"/>
             </connections>
             <point key="canvasLocation" x="131.8840579710145" y="168.41517857142856"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="heart" catalog="system" width="128" height="109"/>
+        <image name="suit.heart" catalog="system" width="128" height="109"/>
+        <image name="suit.heart.fill" catalog="system" width="128" height="109"/>
         <image name="text.bubble" catalog="system" width="128" height="110"/>
     </resources>
 </document>
