--- a/SurRound/View/Profile/Base.lproj/Profile.storyboard
+++ b/SurRound/View/Profile/Base.lproj/Profile.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -136,6 +137,79 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="45m-IU-ni7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1008.8" y="-303.69458128078821"/>
+        </scene>
+        <!--Image Picker Controller-->
+        <scene sceneID="sMB-Hq-zBE">
+            <objects>
+                <viewController storyboardIdentifier="IGImagePickerController" id="c9y-kN-55j" customClass="IGImagePickerController" customModule="SurRound" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eMm-Bl-nvv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Eru-6x-76R">
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="P2Y-B9-bxs">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="IGImageCell" id="LYZ-bI-VYs" customClass="IGImageCell" customModule="SurRound" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Jug-cW-8sJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ckn-YB-eJT">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Ckn-YB-eJT" firstAttribute="leading" secondItem="Jug-cW-8sJ" secondAttribute="leading" id="dxn-0R-fkI"/>
+                                                <constraint firstItem="Ckn-YB-eJT" firstAttribute="top" secondItem="Jug-cW-8sJ" secondAttribute="top" id="k0u-ju-LPm"/>
+                                                <constraint firstAttribute="bottom" secondItem="Ckn-YB-eJT" secondAttribute="bottom" id="rPJ-uZ-GaC"/>
+                                                <constraint firstAttribute="trailing" secondItem="Ckn-YB-eJT" secondAttribute="trailing" id="tVp-9B-a7O"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageView" destination="Ckn-YB-eJT" id="QKu-9d-Alw"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="c9y-kN-55j" id="mxT-hy-jcg"/>
+                                    <outlet property="delegate" destination="c9y-kN-55j" id="HbD-UY-sH1"/>
+                                </connections>
+                            </collectionView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9Ia-cc-ROM">
+                                <rect key="frame" x="0.0" y="44" width="375" height="375"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="9Ia-cc-ROM" secondAttribute="height" id="KnG-si-rfS"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="9Ia-cc-ROM" firstAttribute="leading" secondItem="gQN-aQ-H8s" secondAttribute="leading" id="5DH-Oe-H3N"/>
+                            <constraint firstItem="9Ia-cc-ROM" firstAttribute="trailing" secondItem="gQN-aQ-H8s" secondAttribute="trailing" id="5eW-uA-kmG"/>
+                            <constraint firstItem="gQN-aQ-H8s" firstAttribute="trailing" secondItem="Eru-6x-76R" secondAttribute="trailing" id="7bN-Fh-mSU"/>
+                            <constraint firstItem="Eru-6x-76R" firstAttribute="top" secondItem="gQN-aQ-H8s" secondAttribute="top" id="CVl-DC-gjh"/>
+                            <constraint firstItem="gQN-aQ-H8s" firstAttribute="bottom" secondItem="Eru-6x-76R" secondAttribute="bottom" id="YrF-uq-O7c"/>
+                            <constraint firstItem="Eru-6x-76R" firstAttribute="leading" secondItem="gQN-aQ-H8s" secondAttribute="leading" id="ceL-G7-zMn"/>
+                            <constraint firstItem="9Ia-cc-ROM" firstAttribute="top" secondItem="gQN-aQ-H8s" secondAttribute="top" id="zKa-GC-fDr"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="gQN-aQ-H8s"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="Eru-6x-76R" id="R38-Ee-vex"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0jj-7Q-w3A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2561" y="-304"/>
         </scene>
         <!--User Table View Controller-->
         <scene sceneID="cLj-4Z-NxD">
